# sageopt

./: .buildinfo  .coverage  .coveragerc  .coveralls.yml  .coveralls_publish_config  .gitignore  .travis.yml  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  background.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  relatedsoftware.html  release_procedure.md  releasehistory.html  search.html  searchindex.js  setup.py
.doctrees/: background.doctree  environment.pickle  index.doctree  install.doctree  relatedsoftware.doctree  releasehistory.doctree
.doctrees/api_reference/: sageopt.coniclifts.doctree  sageopt.doctree  sageopt.relaxations.doctree  sageopt.sage_polynomials.doctree  sageopt.sage_signomials.doctree  sageopt.symbolic.doctree  (+2 more)
_sources/: index.rst.txt  install.rst.txt  releasehistory.rst.txt
_static/: alabaster.css
api_reference/: sageopt.coniclifts.html  sageopt.html  sageopt.relaxations.html  sageopt.sage_polynomials.html  sageopt.sage_signomials.html  sageopt.symbolic.html  sageopt.symbolic_polynomials.html  sageopt.symbolic_signomials.html
design_notes/: coniclifts.md
docs/: CHANGELOG.md  README.md  conf.py  genindex.html  index.html  objects.inv  searchindex.js
docs/_build/: genindex.html  (+2 more)
documentation/: sageopt.coniclifts.html  sageopt.gpkit.html  sageopt.html  sageopt.nonnegativity.html  sageopt.polynomials.html  sageopt.signomials.html
examples/: examples.html  relative_entropy_and_partial_dualization.html
sageopt/: __init__.py
source/: conf.py  index.rst  install.rst  relatedsoftware.rst  releasehistory.rst
(+147 files in other folders)
